--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,6 +1,5 @@
 @model LoginViewModel
-
-<div class="login-page">
+<div class="mx-auto" style="width: 400px;">
     <div class="lead">
     </div>
 
@@ -13,7 +12,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-header">
-                        <h2>Local Account</h2>
+                        <h5>Local Account</h5>
                     </div>
 
                     <div class="card-body">
@@ -52,7 +51,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-header">
-                        <h2>External Account</h2>
+                        <h5>External Account</h5>
                     </div>
                     <div class="card-body">
                         <ul class="list-inline">
