--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,31 +17,16 @@ a { color: #0366d6; }
     color: #fff;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-    color: #fff;
+.navbar-custom {
+    background-color: #071E3E !important;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-
-html { font-size: 14px; }
-
-@media (min-width: 768px) {
-    html { font-size: 16px; }
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+    color: green;
 }
 
-.border-top { border-top: 1px solid #e5e5e5; }
 
-.border-bottom { border-bottom: 1px solid #e5e5e5; }
-
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
-
-button.accept-policy {
-    font-size: 1rem;
-    line-height: inherit;
-}
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -51,15 +36,3 @@ html {
     position: relative;
 }
 
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
-
-.footer {
-    bottom: 0;
-    line-height: 60px; /* Vertically center the text there */
-    position: absolute;
-    white-space: nowrap;
-    width: 100%;
-}
