--- a/Views/Account/LoggedOut.cshtml
+++ b/Views/Account/LoggedOut.cshtml
@@ -11,10 +11,10 @@
         <small>You are now logged out</small>
     </h1>
 
-    @if (Model.PostLogoutRedirectUri != null)
+  @*  @if (Model.PostLogoutRedirectUri != null)
     {
         <div>
-            Click <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">here</a> to return to the
+            Click <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri" id="post-logout-redirect-uri">here</a> to return to the
             <span>@Model.ClientName</span> application.
         </div>
     }
@@ -22,13 +22,13 @@
     @if (Model.SignOutIframeUrl != null)
     {
         <iframe width="0" height="0" class="signout" src="@Model.SignOutIframeUrl"></iframe>
-    }
+    }*@
 </div>
-
+@*
 @section scripts
 {
     @if (Model.AutomaticRedirectAfterSignOut)
     {
         <script src="~/js/signout-redirect.js"></script>
     }
-}
+}*@
